--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <header>
     <!--<a href="https://calendar.google.com"><button type="button" class="button">--Calender--</button></a>-->
     <div id="logo"><h1>DEBASHISH METER READING</h1></div>
-    <div id="add"><h2>Barasat, Kol-125</h2></div>
+    <!--<div id="add"><h2>Barasat, Kol-125</h2></div>-->
     </header>
 
     <table style="width:100%">
