--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <table style="width:100%">
       <tr>
-        <th style="width:20%">DATE</th>
-        <th style="width:60%">CALCULATION</th>
-        <th style="width:20%">RESULT</th>
+        <th style="width:30%">DATE</th>
+        <th style="width:40%">CALCULATION</th>
+        <th style="width:30%">RESULT</th>
       </tr>
       <tr>
         <td>01-12-2022</td>
@@ -119,7 +119,7 @@
     <div class="credit"> copyright @ 2022 by <span>Aritra Bera</span> </div>
 
     <div class="loader-container">
-      <img src="loading.gif" alt="">
+      <img src="Loading.gif" alt="">
     </div>
   
 
