--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
   </head>
   <body>
+    
+  <a href="https://www.geogebra.org/calculator" class="float">
+      <i class="fas fa-calculator"></i>
+   </a>
+   
+    
     <!--<div id="info" ><marquee direction="left" scrollamount="8" behavior="alternate">Year: 2022</marquee></div>-->
    <header>
     <!--<a href="https://calendar.google.com"><button type="button" class="button">--Calender--</button></a>-->
