--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   </head>
   <body>
     
-  <a href="https://www.geogebra.org/calculator" class="float">
+    <!-- calculator starts-->
+    <a href="https://www.geogebra.org/calculator" class="float">
       <i class="fas fa-calculator"></i>
-   </a>
-   
+    </a>
+    <!-- calculator ends -->
     
     <!--<div id="info" ><marquee direction="left" scrollamount="8" behavior="alternate">Year: 2022</marquee></div>-->
    <header>
