--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <!-- calculator starts-->
     <a href="https://www.geogebra.org/calculator" class="float">
-      <i class="fas fa-calculator"></i>
+      <i id="icon" class="fas fa-calculator"></i>
     </a>
     <!-- calculator ends -->
     
