--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     
     <!-- calculator starts-->
-    <a href="https://www.geogebra.org/calculator" class="float">
-      <i id="icon" class="fas fa-calculator"></i>
+    <a href="#" class="float">
+    <i class="fa fa-plus my-float"></i>
     </a>
     <!-- calculator ends -->
     
