--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     
     <!-- calculator starts-->
-    <a href="#" class="float">
-    <h3>+</h3>
+    <a href="https://www.geogebra.org/calculator" class="float">
+    <h3><i class="fa fa-calculator" aria-hidden="true"></i></h3>
     </a>
     <!-- calculator ends -->
     
