--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     
-    <!-- calculator starts-->
+    <!-- calculator starts
     <a href="https://www.geogebra.org/calculator" class="float">
     <h3>+</h3>
     </a>
-    <!-- calculator ends -->
+     calculator ends -->
     
     <!--<div id="info" ><marquee direction="left" scrollamount="8" behavior="alternate">Year: 2022</marquee></div>-->
    <header>
