--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     
     <!-- calculator starts -->
-    <a href="#" class="float">
+    <a href="https://calendar.google.com" class="float">
         <img src="/img/Calculator.png" alt="">
         </a>
     <!-- calculator ends -->
