--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     
     <!-- calculator starts -->
-    <a href="https://calendar.google.com" class="float">
-        <img src="/img/Calculator.png" alt="">
+    <a href="https://www.desmos.com/scientific" class="float">
+        <img src="img/Calculator.png" alt="">
         </a>
     <!-- calculator ends -->
     
