--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     
     <!-- calculator starts -->
-    <a href="https://www.desmos.com/scientific" class="float">
+    <a href="https://aritrabera2002.github.io/Calculator/" class="float">
         <img src="img/Calculator.png" alt="">
         </a>
     <!-- calculator ends -->
